# advent-of-code-2021

./: Cargo.toml
puzzle_01/: Cargo.toml  Makefile  solution_01-part-01.py  solution_01-part-02.py
puzzle_01/src/: main.rs  part_01.rs  part_02.rs  puzzle_01.rs  puzzle_02.rs
puzzle_02/: Cargo.toml  solution_02-part-01.py  solution_02-part-02.py
puzzle_02/src/: data.rs  main.rs  puzzle_02.rs
puzzle_03/: Cargo.toml  Makefile  solution_03-part-01.py  solution_03-part-02.py
puzzle_03/src/: main.rs  part_01.rs  part_02.rs  puzzle_03.rs
puzzle_04/: Board.py  Cargo.toml  solution_04.py
puzzle_04/src/: board.rs  main.rs  puzzle_04.rs  solution.rs
puzzle_05/: Cargo.toml  LineProcessor.py  Makefile  Row.py  solution_05.py
puzzle_05/src/: main.rs  solution.rs
puzzle_06/: Cargo.toml
puzzle_06/src/: main.rs  solution.rs
puzzle_07/: Cargo.toml  Makefile
puzzle_07/src/: main.rs  solution.rs
